--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 I am working1
 </h1>
 <video>
-    <source src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" type='video/mp4'>
+    <source src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" type='video/mp4' onclick="this.play()">
 </video>
 <video src="https://drive.google.com/file/d/1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ/view"></video>
