--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ I am working1
 <video>
     <source src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" type='video/mp4' onclick="this.play()">
 </video>
-<video src="https://drive.google.com/file/d/1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ/view"></video>
+<video src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" type='video/mp4' onclick="this.play()"></video>
