--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <h1>
 I am working1
 </h1>
-<video>
-    <source src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" type='video/mp4' onclick="this.play()">
-</video>
-<video src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" type='video/mp4' onclick="this.play()"></video>
+
+<video src="https://drive.google.com/uc?export=download&id=1ZUSbgbdpUnMNlbQ5FRjm1U6T2Zy5rlPQ" controls type='video/mp4' onclick="this.play()"></video>
